--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
     "lint": "eslint .",
+    "build": "npm install --legacy-peer-deps && vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
