--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "lint": "eslint .",
-    "build": "npm install --legacy-peer-deps && vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "@devexpress/dx-react-core": "^4.0.11",
@@ -20,6 +20,7 @@
     "@mui/material": "^7.1.1",
     "@tailwindcss/vite": "^4.1.8",
     "lucide-react": "^0.513.0",
+    "scheduler": "^0.26.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
